# temporal-scheduler

./: .coveragerc  .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
benchmarks/: local_echo_manifest.json  salmon_demo_manifest.json  test_scheme_local_docker_slurm_manifest.json  test_scheme_resolved_slurm_manifest.json  test_scheme_slurm_manifest.json
bwb_scheduler/: benchmark_harness.py  ir_to_scheduler.py  main.py  nextflow_ir_to_scheduler.py  ows_to_networkx_graph.py  resolved_payload.py  sample_direct_docker_client.py  schedule_generator.py  test_client.py  worker.py
deployment/: .env.example  .env.local.example  Dockerfile  Dockerfile.go-slurm-backend  README.md  docker-compose.extra-binds.example.yml  docker-compose.local.yml  docker-compose.yml
docs/: conditional_execution_runbook.md
go_slurm_backend/: go.mod  main.go
plans/: go_slurm_backend_review.md  ucsf_transfer_v0.md
sample_docker/: Dockerfile  main.py  pyproject.toml
scripts/: local_scheduler_ssh_docker_worker_down.sh  local_scheduler_ssh_docker_worker_up.sh  local_scheduler_stack_down.sh  local_scheduler_stack_up.sh  local_slurm_test_env_down.sh  local_slurm_test_env_up.sh  run_arabidopsis_conditional_local_slurm_e2e.sh  run_local_docker_slurm_worker.sh  run_local_scheduler_smoke.sh  run_local_slurm_e2e.sh  run_remote_docker.py  run_salmon_ir_local_slurm_e2e.sh  run_slurm_worker.sh  setup_local_slurm_host.sh  start_service.sh  test_ucsf_gpu_connectivity.sh
star_salmon_short/: star_salmon_short.ows
tests/: sample_ows.xml  test_benchmark_harness.py  test_bind_mounts.py  test_conditions.py  test_go_slurm_shim.py  test_graph_manager.py  test_ir_to_scheduler.py  test_local_activities.py  test_nextflow_ir_to_scheduler.py  test_ows_conversion.py  (+6 more)
(+84 files in other folders)
