[tool.poetry]
name = "sample-docker"
version = "0.1.0"
description = ""
authors = ["Varun Mittal <varunmittal91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
